<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EDF - Gestion des Clients</string>

    <color name="Blanc">#FFFFFF</color>

    <!-- Valeurs pour l'ActivityMain -->
    <string name="lblIdentification">Identification</string>
    <string name="lblClients">Relevé Compteur</string>
    <string name="lblImport">Import de données</string>
    <string name="lblSave">Sauvegarde</string>
    <string name="title_activity_activite_identification">ActiviteIdentification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_clients">Clients</string>
    <string name="title_activity_import">Import</string>
    <string name="title_activity_import_donnees">ImportDonnees</string>
    <string name="title_activity_sauvegarde">Sauvegarde</string>
    <string name="title_activity_affiche_liste_client">Liste des Clients</string>
    <string name="title_activity_modification_client">Modification d\'un client</string>
    <string name="title_activity_activity_geolocalisation">Plan</string>

    <!-- Valeurs pour l'activité ModificationClient -->
    <string name="modifClient_txvIdentifiant">Identifiant :</string>
    <string name="modifClient_txvIdentite">Identité :</string>
    <string name="modifClient_txvTelephone">Téléphone :</string>
    <string name="modifClient_txvAdresse">Adresse :</string>
    <string name="modifClient_txvCompteur">Compteur :</string>
    <string name="modifClient_txvAncienReleve">Ancien relevé :</string>
    <string name="modifClient_txvDateAncienReleve">À la date du :</string>
    <string name="modifClient_txvReleve">Relevé :</string>
    <string name="modifClient_txvDateReleve">Date :</string>
    <string name="modifClient_txvSituation">Situation :</string>
    <string name="modifClient_btnGeoloc">Géoloc.</string>
    <string name="modifClient_btnOk">Ok</string>
    <string name="modifClient_btnAnnuler">Annuler</string>
    <string name="title_activity_capture_signture">CaptureSignture</string>
    <string name="title_activity_affiche_signature">AfficheSignature</string>
    
    <string name="modifClient_btnFaireSigner">Faire signer le client</string>
    <string name="modifClient_btnVoirSignature">Voir la signature du client</string>
    
    
    <string name="capt_sign_btnEffacer">Effacer</string>
    <string name="capt_sign_btnSauvegarder">Sauvegarder</string>
    <string name="aff_sign_btnRetour">Retour</string>

</resources>