<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.btssio.edf_florian.ModificationClient" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TableRow
                android:id="@+id/tbrIdentifiant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txvIdentifiant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:text="@string/modifClient_txvIdentifiant" />

                <TextView
                    android:id="@+id/txvIdentifiantValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cli0101" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrIdentite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvIdentite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvIdentite" />

                <TextView
                    android:id="@+id/txvIdentiteValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NOM Prénom" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrTelephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvTelephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvTelephone" />

                <TextView
                    android:id="@+id/txvTelephoneValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01.23.45.67.89" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrAdresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvAdresse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvAdresse" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrAdresseValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/txvAdresseValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1 rue pasteur" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrCpVille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/txvCp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01234" />

                <TextView
                    android:id="@+id/txvVille"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ville" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrCompteur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvDetailsCompteur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvCompteur" />

                <TextView
                    android:id="@+id/txvCompteurValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="19950055123" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrAncienReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvAncienReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvAncienReleve" />

                <TextView
                    android:id="@+id/txvAncienReleveValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3461.35" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrDateAncienReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/txvDateAncienReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvDateAncienReleve" />

                <TextView
                    android:id="@+id/txvDateAncienReleveValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="09/03/15" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/txvReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvReleve" />

                <EditText
                    android:id="@+id/edtReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tbrDateReleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txvDateReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvDateReleve" />

                <EditText
                    android:id="@+id/edtDateReleve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </TableRow>

            <TableRow
                android:id="@+id/tbrSituation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/txvSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modifClient_txvSituation" />

                <EditText
                    android:id="@+id/edtSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/btnFaireSigner"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/modifClient_btnFaireSigner" />

            <Button
                android:id="@+id/btnVoirSignature"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modifClient_btnVoirSignature" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp" >

            <Button
                android:id="@+id/btnGeoloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modifClient_btnGeoloc" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="10dp"
                android:text="@string/modifClient_btnOk" />

            <Button
                android:id="@+id/capt_sign_btnAnnuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modifClient_btnAnnuler" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
