<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="600dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.btssio.edf_florian.CaptureSignture" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="top" >

        <Button
            android:id="@+id/capt_sign_btnAnnuler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifClient_btnAnnuler" />

        <Button
            android:id="@+id/capt_sign_btnEffacer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capt_sign_btnEffacer" />

        <Button
            android:id="@+id/capt_sign_btnSauvegarder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capt_sign_btnSauvegarder" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytDessin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    </LinearLayout>

</LinearLayout>
